--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-image: url("https://image.shutterstock.com/z/stock-vector-modern-professional-fantasy-sports-template-logo-design-457880965.jpg");
-  height: 100vh;
+  /* background-image: url("https://image.shutterstock.com/z/stock-vector-modern-professional-fantasy-sports-template-logo-design-457880965.jpg"); */
   height: 100vh;
 }
 
@@ -22,6 +21,7 @@ header {
   background-repeat: none;
   width: 100%;
   top: 0;
+  height: 10vh;
 }
 
 header>h1>a {
@@ -32,7 +32,7 @@ header>h1>a {
 .app-body {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: auto;
   align-items: center;
   justify-content: center;
 }
@@ -56,10 +56,21 @@ header>h1>a {
 }
 
 .team-page {
-  margin: 8rem auto;
-  background: #d6d6d6;
-  width: 20rem;
-  padding: 0rem 0rem 2rem 0rem;
+  display: flex;
+  margin: 10px auto;
+  padding: 4px;
+  background: #8f2727;
+  width: 300px;
+  justify-content: center;
+}
+
+.players-page {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  background-color: grey;
+  width: 80vw;
+  height: 800px;
 }
 
 .create-form {
