--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  /* background-image: url("https://image.shutterstock.com/z/stock-vector-modern-professional-fantasy-sports-template-logo-design-457880965.jpg"); */
   height: 100vh;
+  width: 100vw;
+  min-width: 1040px;
 }
 
 
@@ -18,9 +19,28 @@ header {
   font-family: 'Arial';
   text-align: left;
   background: linear-gradient(to top, #081cd3, #5b9ef7, #a7cffd);
-  width: 100%;
-  top: 0;
+  /* width: 100%; */
+  /* top: 0; */
   height: 10vh;
+}
+
+.logo-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.logo-text {
+  color: rgb(70, 255, 147);
+}
+
+.logged-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  text-align: right;
 }
 
 header>h1>a {
@@ -33,7 +53,7 @@ header>h1>a {
   background-image: url('./pics/background.jpg');
   background-repeat: none;
   background-size: cover;
-  width: 100vw;
+  /* width: 100vw; */
   height: 90vh;
   align-items: center;
   justify-content: center;
@@ -59,14 +79,13 @@ img {
 }
 
 .team-container {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
   width: 50vw;
-  min-width: 640px;
+  min-width: 40vw;
   height: 60vh;
-  padding-top: 10rem;
-}
-
-.team-create {
-  background: lightgrey;
+  margin-top: 10%;
 }
 
 .team-card {
@@ -74,14 +93,21 @@ img {
   background: lightgrey;
   width: 100%;
   height: 5vh;
+  margin: 2px auto;
+}
+
+#team-create-card {
+  background: #a7cffd;
+  margin-bottom: 1vh;
 }
 
 .team-page {
   display: flex;
-  margin: 10px auto;
-  padding: 4px;
+  /* margin: 0;
+  padding: 0; */
+  margin-bottom: 7vh;
   background: #f09e9e;
-  width: 300px;
+  width: 100%;
   justify-content: center;
 }
 
@@ -90,18 +116,21 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  padding-top: 4vh;
 }
 
 .team-link-home {
   background: #f09e9e;
+  width: 100%;
 }
 
 .players-page {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  width: 95vw;
-  height: 800px;
+  width: 50vw;
+  height: 60vh;
   overflow: auto;
 }
 
