--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fontlibrary.org/face/bebas');
+@import url('https://fontlibrary.org/face/space-meatball');
+@import url('https://fontlibrary.org/face/xolonium');
 
 .app-container {
   display: flex;
@@ -6,8 +9,25 @@
   height: 100vh;
   width: 100vw;
   min-width: 1040px;
+  font-family: 'BebasNeueRegular';
+  font-size: 20px;
 }
 
+a:link, a:visited, a:hover, a:active {
+  text-decoration:none;
+  color: maroon;
+}
+
+#app-title {
+  font-family: 'XoloniumRegular';
+  font-size: 4vh;
+  /* font-weight: 800; */
+  text-decoration: none;
+  /* font-stretch: expanded;
+  letter-spacing: 1vw; */
+  /* color: rgb(214, 12, 12); */
+  color: #394a6d;
+}
 
 h1 {
   margin: 0;
@@ -18,7 +38,9 @@ header {
   justify-content: space-between;
   font-family: 'Arial';
   text-align: left;
-  background: linear-gradient(to top, #081cd3, #5b9ef7, #a7cffd);
+  /* background-color: #52de97; */
+  background-image: linear-gradient(164deg, #c0ffb3 10%, #3c9d9b 71%, #c0ffb3 85%);
+  /* background: linear-gradient(to top, #081cd3, #5b9ef7, #a7cffd); */
   /* width: 100%; */
   /* top: 0; */
   height: 10vh;
@@ -32,15 +54,35 @@ header {
 }
 
 .logo-text {
-  color: rgb(70, 255, 147);
+  display: flex;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
 }
 
 .logged-div {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-end;
   height: 100%;
   text-align: right;
+  margin: 0;
+}
+
+#logged-div-user {
+  font-family: 'BebasNeueRegular';
+  font-size: 4vh;
+  color: maroon;
+}
+
+.logged-div-children {
+  margin: 0;
+  padding: 0;
+}
+
+#logged-div-button {
+  width: 60px;
 }
 
 header>h1>a {
@@ -109,6 +151,7 @@ img {
   background: #f09e9e;
   width: 100%;
   justify-content: center;
+  height: 7vh;
 }
 
 .team-wrapper {
