--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,11 +21,7 @@ a:link, a:visited, a:hover, a:active {
 #app-title {
   font-family: 'XoloniumRegular';
   font-size: 4vh;
-  /* font-weight: 800; */
   text-decoration: none;
-  /* font-stretch: expanded;
-  letter-spacing: 1vw; */
-  /* color: rgb(214, 12, 12); */
   color: #394a6d;
 }
 
@@ -38,12 +34,9 @@ header {
   justify-content: space-between;
   font-family: 'Arial';
   text-align: left;
-  /* background-color: #52de97; */
   background-image: linear-gradient(164deg, #c0ffb3 10%, #3c9d9b 71%, #c0ffb3 85%);
-  /* background: linear-gradient(to top, #081cd3, #5b9ef7, #a7cffd); */
-  /* width: 100%; */
-  /* top: 0; */
   height: 10vh;
+  overflow: auto;
 }
 
 .logo-div {
@@ -95,7 +88,6 @@ header>h1>a {
   background-image: url('./pics/background.jpg');
   background-repeat: none;
   background-size: cover;
-  /* width: 100vw; */
   height: 90vh;
   align-items: center;
   justify-content: center;
@@ -131,6 +123,9 @@ img {
 }
 
 .team-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   background: lightgrey;
   width: 100%;
@@ -145,8 +140,6 @@ img {
 
 .team-page {
   display: flex;
-  /* margin: 0;
-  padding: 0; */
   margin-bottom: 7vh;
   background: #f09e9e;
   width: 100%;
