--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,9 +6,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  height: 100vh;
-  width: 100vw;
-  min-width: 1040px;
+  height: 94vh;
+  width: 94vw;
+  /* min-width: 1040px; */
   font-family: 'BebasNeueRegular';
   font-size: 20px;
 }
@@ -116,7 +116,7 @@ img {
   display: flex;
   flex-direction: column;
   overflow: auto;
-  width: 50vw;
+  width: 48vw;
   min-width: 40vw;
   height: 60vh;
   margin-top: 10%;
@@ -144,7 +144,7 @@ img {
   background: #f09e9e;
   width: 100%;
   justify-content: center;
-  height: 7vh;
+  /* height: 7vh; */
 }
 
 .team-wrapper {
